--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,7 +1,7 @@
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 1rem;
-  font-weight: 500;
+  font-weight: 400;
   line-height: 1.1;
 }
 
@@ -16,23 +16,46 @@ p {
   margin: 1rem 0;
 }
 
+.borel-regular {
+  font-family: "Borel", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+
 h1 {
-  font-size: 2.5rem;
+  font-family: "Borel", sans-serif;
+  font-size: 3.5rem;
   font-weight: 600;
+  color: #f0512e;
+}
+
+.zen-maru gothic-regular {
+  font-family: "Zen Maru Gothic", serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 h2 {
+  font-family: "Zen Maru Gothic", serif;
   font-size: 1.5rem;
   font-weight: 500;
 }
 
+.bagel-fat one-regular {
+  font-family: "Bagel Fat One", system-ui;
+  font-weight: 400;
+  font-style: normal;
+}
+
 h3 {
+  font-family: "Bagel Fat One", system ui;
   font-size: 1.25rem;
   font-weight: 200;
   text-transform: uppercase;
 }
 
 h4, h5, h6 {
+
   font-size: 1.25rem;
   font-weight: 600;
 }
@@ -44,7 +67,12 @@ p {
 }
 
 
-button {
-  font-size: 1rem;
+a.button {
+  font-size: 1.5rem;
   font-weight: 500;
+}
+
+a.links {
+  text-decoration: none;
+  color: white;
 }
