--- a/styles/assignment-two.css
+++ b/styles/assignment-two.css
@@ -12,6 +12,7 @@
   height: 100%;
   object-fit: cover;
   background-position: center;
+  border: none;
 }
 
 .hero-text {
@@ -27,46 +28,29 @@
   vertical-align: text-bottom;
 }
 
-a.button {
-  padding: 0.5rem 1rem;
-  border: 1px outset #f0512e;
-  border-radius: 3px;
-  color: #8d683d;
-  background-color: #fbf0ca;
-  
-  text-decoration: none;
-  font-family: "Bagel Fat One", system ui;
-}
+
 
 /* CONTENT SECTION */
 .content-container {
-    display: grid;
-    grid-template-areas: 
-    "header youtube youtube content";
-  column-gap: 15px;
+  justify-content: left;
   background-color: #8d683d;
   box-shadow: 0rem 0.125rem 1.5rem rgb(0 0 0 / 12%);
 }
 
 .iframe {
-  position: relative;
   width: 100%;
   height: 100%;
-  grid-area: youtube;
+  object-fit: contain;
 }
-
+.content-card-container {
+  object-fit: contain;
+}
 .content-header {
   font-size: 2rem;
   color: #fbf0ca;
-  text-align:right;
-  grid-area: header;
+  text-align: right;
 }
 
-.content-body {
-  font-size: 2rem;
-  color: #fbf0ca;
-  grid-area: content;
-}
 
 /* CARD SECTION */
 .card-container {
@@ -81,7 +65,7 @@ a.button {
   flex: 25% 0;
 }
 
-img {
+img, iframe {
   border-bottom: 0.25rem dashed #f0512e;
   border-radius: 0.25rem 0.25rem 0 0;
   aspect-ratio: 16 / 9;
@@ -108,7 +92,7 @@ img {
 
 .accordion {
   background-color: #f0dbb4;
-  color: #000;
+  color: #014652;
   cursor: pointer;
   padding: 18px;
   width: 100%;
@@ -124,7 +108,7 @@ img {
 
 .panel {
   padding: 0 18px;
-  color: #000;
+  color: #014652;
   background-color: white;
   display: none;
   overflow: hidden;
@@ -139,9 +123,9 @@ img {
 .footer-container {
   display: grid;
   grid-template-areas: 
-  "head head nav map map"
-  "head head nav col4 col5"
-  "copyright copyright copyright copyright copyright";
+  "head head nav nav"
+  "head head nav nav"
+  "copyright copyright copyright copyright";
   column-gap: 15px;
   background-color: #f0512e;
   width: 100%;
@@ -156,6 +140,19 @@ img {
 
 .footer-center {
   grid-area: nav;
+  text-align: right;
+  padding: 1rem;
+}
+a.links {
+  color: #f0dbb4;
+}
+a.links:hover {
+  color: #014652;
+}
+
+.footer-right {
+  grid-area: copyright;
+  text-align: center;
 }
 
 /* Mobile (max-width: 768px): 1 × 9 (full width cards)*/
@@ -163,9 +160,16 @@ img {
   .container {
     flex-flow: column wrap;
   }
-
+  .content-container {
+    object-fit: contain;
+    overflow: auto;
+  }
   img {
     min-height: 15.5rem;
+  }
+  .footer-container {
+    display: flexbox;
+    flex-flow: column wrap;
   }
 }
 
