--- a/styles/assignment-two.css
+++ b/styles/assignment-two.css
@@ -1,5 +1,25 @@
-html {
-  overflow-x: hidden; 
+html,body {
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+}
+
+.skip {
+  position: absolute;
+  left: -100000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
+
+.skip:focus {
+  position: static;
+  width: auto;
+  height: auto;
 }
 
 /* HERO SECTION */
@@ -35,7 +55,7 @@ html {
 /* CONTENT SECTION */
 .content-container {
   justify-content: left;
-  background-color: #8d683d;
+  background-color: #ffd080;
   box-shadow: 0rem 0.125rem 1.5rem rgb(0 0 0 / 12%);
 }
 
@@ -55,6 +75,10 @@ html {
 
 
 /* CARD SECTION */
+ul {
+  list-style: none;
+}
+
 .card-container {
   display: flexbox;
   align-items: center;
@@ -68,7 +92,7 @@ html {
 }
 
 img, iframe {
-  border-bottom: 0.25rem dashed #f0512e;
+  border-bottom: 0.25rem dashed #91321d;
   border-radius: 0.25rem 0.25rem 0 0;
   aspect-ratio: 16 / 9;
   height: auto;
@@ -86,6 +110,11 @@ img, iframe {
 }
 
 /* ACCORDION SECTION */
+.container {
+  margin: 1rem auto;
+  padding: 1.5rem 3rem;
+  position: relative;
+}
 .accordion-container {
   background-color: #014652;
   color: #fff;
@@ -104,7 +133,7 @@ img, iframe {
   transition: 0.4s;
 }
 .active, .accordion:hover {
-  background-color: #f0512e;
+  background-color: #fff;
   opacity: 75%;
 }
 
@@ -129,7 +158,7 @@ img, iframe {
   "head head nav nav"
   "copyright copyright copyright copyright";
   column-gap: 15px;
-  background-color: #f0512e;
+  background-color: #ffd080;
   width: 100%;
   height: 250px;
   padding: 1rem 1rem 1rem 1rem;
