--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-size: 1rem;
+  font-size: 2.5rem;
   font-weight: 400;
   line-height: 1.1;
   color: #014652;
@@ -25,9 +25,9 @@ p {
 
 h1 {
   font-family: "Borel", sans-serif;
-  font-size: 4.5rem;
+  font-size: 6rem;
   font-weight: 600;
-  color: #f0512e;
+  color: #ffd080;
 }
 
 .zen-maru gothic-regular {
@@ -38,8 +38,9 @@ h1 {
 
 h2 {
   font-family: "Zen Maru Gothic", serif;
-  font-size: 2.5rem;
+  font-size: 3.5rem;
   font-weight: 500;
+  color:#7b1e09;
 }
 
 .bagel-fat one-regular {
@@ -50,45 +51,47 @@ h2 {
 
 h3 {
   font-family: "Bagel Fat One", system ui;
-  font-size: 1.25rem;
+  font-size: 3.5rem;
   font-weight: 200;
   text-transform: uppercase;
 }
 
 h4, h5, h6 {
-  font-size: 1.25rem;
+  font-size: 1.75rem;
   font-weight: 600;
 }
 
-p {
-  font-size: 1rem;
+p, nav {
+  font-size: 1.25rem;
   font-weight: 500;
   line-height: 1.5;
-  color: #fff;
+  color: #014652;
 }
 
 p.paragraph {
-  color: #8d683d;
+  color: #7D5C36;
 }
 
 a.button {
   padding: 0.5rem 1rem;
-  border: 1px outset #f0512e;
+  border: 1px outset #ffd080;
   border-radius: 3px;
-  color: #8d683d;
+  color: #7D5C36;
   background-color: #fbf0ca;
   text-decoration: none;
   font-family: "Bagel Fat One", system ui;
-  font-size: 1.5rem;
+  font-size: 2.5rem;
   font-weight: 500;
 }
 
 a.links {
-  text-decoration: none;
-  color: #f0dbb4;
+  color: #014652;
+  cursor: pointer;
 }
 a.links:hover {
-  color: #014652;
+  padding: 0.1rem;
+  background-color: #014652;
+  color: #ffd080; 
 }
 
 button.accordion {
