--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -25,7 +25,7 @@ p {
 
 h1 {
   font-family: "Borel", sans-serif;
-  font-size: 6rem;
+  font-size: 5rem;
   font-weight: 600;
   color: #ffd080;
 }
@@ -37,7 +37,7 @@ h1 {
 }
 
 h2 {
-  font-family: "Zen Maru Gothic", serif;
+  font-family: "Bagel Fat One", system ui;
   font-size: 3.5rem;
   font-weight: 500;
   color:#7b1e09;
@@ -49,9 +49,9 @@ h2 {
   font-style: normal;
 }
 
-h3 {
+h2, h3 {
   font-family: "Bagel Fat One", system ui;
-  font-size: 3.5rem;
+  font-size: 3rem;
   font-weight: 200;
   text-transform: uppercase;
 }
